# parcel-thief

./: .gitignore  Cargo.toml  README.md  parcel-thief.code-workspace
parcel-client/client-injector/: Cargo.toml
parcel-client/client-injector/src/: main.rs  watcher.rs
parcel-common/: Cargo.toml
parcel-common/src/: aes.rs  lib.rs  rand.rs
parcel-common/src/api_types/: area.rs  auth.rs  baggage.rs  mission.rs  mod.rs  object.rs  player_profile.rs  rank.rs  road.rs
parcel-common/src/api_types/frontend/: accounts.rs  auth.rs  baggages.rs  missions.rs  mod.rs  qpid_objects.rs  settings.rs
parcel-common/src/serde_util/: mod.rs
parcel-data-export/: Cargo.toml
parcel-data-export/src/: baggages.rs  lost_baggages.rs  main.rs  qpid_areas.rs
parcel-data-export/src/readers/: array.rs  baggage_list_item.rs  commodity_list_item.rs  core_file.rs  core_object.rs  delivery_point_info_resource.rs  equipment_list_item.rs  game_list_item_base.rs  localized_text_resource.rs  lost_baggage_with_name_and_icon_list.rs  mission_abstract_point_resource.rs  mission_static_abstract_point_resource.rs  mod.rs  raw_material_list_item.rs  reference.rs  rtti_object.rs  string.rs  weapon_list_item.rs
parcel-game-data/: Cargo.toml
parcel-game-data/src/: baggages.rs  language.rs  lib.rs  qpid_areas.rs
parcel-proxy/: Cargo.toml
parcel-proxy/src/: aes.rs  frontend.rs  http_utility.rs  incoming.rs  logger.rs  main.rs  outgoing.rs  proxy_response_handler.rs  server.rs  state.rs
parcel-save-tool/: Cargo.toml
parcel-save-tool/src/: checkpoint_reader.rs  main.rs  oodle.rs  profile_reader.rs  reader.rs  save_file_reader.rs
parcel-server/: Cargo.toml  build.rs  diesel.toml
parcel-server/frontend/: package.json  tsconfig.json
parcel-server/frontend/src/: api_types.ts  app.tsx  fonts.scss  global_style.tsx  index.html  index.tsx  style.scss
parcel-server/migrations/2023-02-09-211252_create_accounts_table/: down.sql  up.sql
parcel-server/migrations/2023-02-21-172830_create_player_profiles_table/: down.sql  up.sql
parcel-server/migrations/2023-02-26-132050_create_qpid_objects_tables/: down.sql  up.sql
parcel-server/migrations/2023-02-28-192750_create_missions_tables/: down.sql  up.sql
parcel-server/migrations/2023-03-08-001515_create_extra_missions_indices/: down.sql  up.sql
parcel-server/migrations/2023-03-12-125101_create_catapult_shell_infos_table/: down.sql  up.sql
parcel-server/migrations/2023-03-19-222609_create_likes_table/: down.sql  up.sql
parcel-server/migrations/2023-04-02-163834_create_highway_tables/: down.sql  up.sql
parcel-server/migrations/2023-04-05-161514_create_total_highway_likes_table/: down.sql  up.sql
parcel-server/migrations/2023-04-12-195851_make_vehicle_info_pos_and_rot_nullable/: down.sql  up.sql
parcel-server/migrations/2023-04-26-153350_create-wasted-baggages-tables/: up.sql
parcel-server/migrations/2023-04-26-153350_create_wasted_baggages_tables/: down.sql
parcel-server/migrations/2023-05-04-180020_create_relationship_tables/: down.sql  up.sql
parcel-server/migrations/2023-05-06-113254_create_road_tables/: down.sql  up.sql
parcel-server/migrations/2023-05-11-154001_create_unique_index_for_construction_materials/: down.sql  up.sql
parcel-server/migrations/2023-05-18-133123_create_unique_index_for_recycle_materials/: down.sql  up.sql
parcel-server/migrations/2023-06-13-192642_change_object_type_to_varchar/: down.sql  up.sql
parcel-server/migrations/2023-06-19-233819_change_timestamps_accuracy_to_milliseconds/: down.sql  up.sql
parcel-server/migrations/2023-06-23-092151_create_unique_mission_relations_index/: down.sql  up.sql
parcel-server/migrations/2023-06-23-093043_add_timestamp_to_mission_relations/: down.sql  up.sql
parcel-server/migrations/2023-07-17-183610_add_frontend_account_tables/: down.sql  up.sql
parcel-server/migrations/2023-07-28-104645_add_frontend_account_sessions_table/: down.sql  up.sql
parcel-server/migrations/2023-08-15-174428_add_is_deleted_to_qpid_object/: down.sql  up.sql
parcel-server/migrations/2023-11-05-225652_create_custom_mission_table/: down.sql  up.sql
parcel-server/migrations/2024-02-19-160915_add_is_server_column_to_game_accounts/: down.sql  up.sql
parcel-server/migrations/2024-03-13-170400_make_custom_mission_rewards_id_non_nullable/: down.sql  up.sql
parcel-server/src/: embedded_pg.rs  frontend.rs  main.rs  response_error.rs  settings.rs  steam.rs  whitelist.rs
parcel-server/src/background_jobs/: delete_expired_sessions.rs  mod.rs
parcel-server/src/data/: accounts.rs  database.rs  hash_secret.rs  jwt.rs  jwt_secret.rs  memory_cache.rs  mod.rs  redis_client.rs  redis_session_store.rs  session.rs  session_store.rs  steam.rs
parcel-server/src/data/database/: mod.rs  (+10 more)
parcel-server/src/db/: mod.rs  schema.rs
parcel-server/src/embedded/: mod.rs  postgresql.rs  redis.conf  redis.rs
parcel-server/src/endpoints/: add_missions.rs  create_object.rs  create_road.rs  delete_missions.rs  delete_object.rs  delete_wasted_baggages.rs  devote_highway_resources.rs  find_missions.rs  find_qpid_objects.rs  get_highway_resources.rs  get_like_history.rs  get_ordered_missions.rs  get_player_profile.rs  get_player_ranking_records.rs  get_qpid_objects.rs  get_ranking_schedules.rs  get_relationships.rs  get_road_data.rs  get_version.rs  get_wasted_baggages.rs  lookup.rs  mod.rs  put_wasted_baggages.rs  reverse_lookup.rs  send_like.rs  set_construction_materials.rs  set_mission_progress.rs  set_player_profile.rs  set_recycle_materials.rs  set_strand.rs  update_object.rs  update_objects_tag.rs
parcel-server/src/frontend/: error.rs  jwt_session.rs  mod.rs  result.rs
parcel-server/src/middleware/: deep_logger.rs  encryption.rs  mod.rs  wrap_errors.rs
parcel-server/src/session/: mod.rs  redis.rs
parcel-thief/parcel-thief/: Cargo.toml
parcel-thief/parcel-thief/src/: auth.rs  ds_string.rs  lib.rs  offsets.rs  pattern.rs
parcel-thief/thief-injector/: Cargo.toml
parcel-thief/thief-injector/src/: main.rs
re-testing/rtti/rtti-exporter/: Cargo.toml
re-testing/rtti/rtti-exporter-dll/: Cargo.toml
(+214 files in other folders)
