[package]
name = "parcel-data-export"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3", features = ["derive"] }
anyhow = "1.0"
crc32fast = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
enum-iterator = "1.4"
binary-reader = "0.4.5"
uuid = "1.3"
int-enum = "0.5.0"
enum-as-inner = "0.6.0"
parcel-game-data = { path = "../parcel-game-data" }
