[package]
name = "parcel-game-data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
int-enum = "0.5.0"
enum-as-inner = "0.6.0"
enum-iterator = "1.4"
typescript-type-def = { version = "0.5.7", optional = true }
log = "0.4.17"

[features]
ts = ["dep:typescript-type-def"]
