[package]
name = "parcel-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio = { version = "1.24.1", features = ["full"] }
tokio-rustls = "0.23.4"
tokio-native-tls = "0.3.0"
rustls-pemfile = "1.0.2"
clap = { version = "4.0.32", features = ["derive"] }
anyhow = "1.0.68"
httparse = "1.8.0"
http = "0.2.8"
lazy_static = "1.4.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
serde-aux = "4.1.2"
chrono = { version = "0.4.23", features = ["serde"] }
base64 = "0.21.0"
aes-gcm = "0.10.1"
tui = "0.19.0"
crossterm = "0.25.0"
