[package]
name = "parcel-save-tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.11", features = ["derive"] }
anyhow = "1.0.70"
binary-reader = "0.4.5"
chrono = "0.4.24"
rust-ini = "0.18.0"
percent-encoding = "2.2.0"
