[package]
name = "parcel-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.68"
thiserror = "1.0.38"
actix-web = { version = "4.3.0", features = ["rustls"] }
actix-http = "3.3.0"
actix-web-httpauth = "0.8.0"
actix-web-validator = "5.0.1"
validator = { version = "0.16.0", features = ["derive"] }
rustls = "0.20.8"
rustls-pemfile = "1.0.2"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
clap = { version = "4.1.4", features = ["derive", "env"] }
parcel-common = { path = "../parcel-common" }
env_logger = "0.10.0"
log = "0.4.17"
futures-util = "0.3.26"
reqwest = { version = "0.11.14", features = [
    "json",
    "rustls-tls",
], default-features = false }
hex = "0.4.3"
rand = "0.8.5"
rand_chacha = "0.3.1"
chrono = "0.4.23"
async-trait = "0.1.64"
redis = { version = "0.22.3", features = ["tokio-comp"] }
base64 = "0.21.0"
diesel = { version = "2.0.3", features = ["postgres"] }
diesel_migrations = "2.0.0"
dotenv = "0.15.0"
