[package]
name = "parcel-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.69"
thiserror = "1.0.38"
actix-web = { version = "4.3.0", features = ["rustls"] }
actix-http = "3.3.0"
actix-web-httpauth = "0.8.0"
actix-web-validator = "5.0.1"
validator = { version = "0.16.0", features = ["derive"] }
rustls = "0.20.8"
rustls-pemfile = "1.0.2"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
clap = { version = "4.1.4", features = ["derive", "env"] }
parcel-common = { path = "../parcel-common", features = ["ts"] }
env_logger = "0.10.0"
log = "0.4.17"
futures-util = "0.3.26"
futures = "0.3"
reqwest = { version = "0.11.14", features = [
    "json",
    "rustls-tls",
    "stream",
], default-features = false }
hex = "0.4.3"
rand = "0.8.5"
rand_chacha = "0.3.1"
chrono = { version = "0.4.25", features = ["serde"] }
async-trait = "0.1.64"
base64 = "0.21.0"
diesel = { version = "2.1.0" }
diesel-async = { version = "0.3.1", features = ["postgres"] }
diesel_migrations = "2.0.0"
dotenv = "0.15.0"
itertools = "0.10.5"
pg-embed = { git = "https://github.com/faokunega/pg-embed.git" }
lazy_static = "1.4.0"
portpicker = "0.1.1"
tokio = { version = "1.25.0", features = ["full"] }
zip = "0.6.4"
moka = { version = "0.11", features = ["future"] }
bincode = "1.3"
rust-embed = "6.8"
mime_guess = "2.0"
steam-auth = "1.0"
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.6"
typescript-type-def = "0.5.7"
flagset = { version = "0.4.3", features = ["serde"] }
parcel-game-data = { path = "../parcel-game-data" }
pbkdf2 = { version = "0.12", features = ["simple"] }
tokio-cron-scheduler = "0.9.4"

[build-dependencies]
typescript-type-def = "0.5.7"
parcel-common = { path = "../parcel-common", default-features = false, features = [
    "ts",
] }
which = "4.4"
