[package]
name = "parcel-thief"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.69"
retour = "0.2.0"
lazy_static = "1.4.0"
libc = "0.2.139"
parcel-common = { path = "../../parcel-common" }
memchr = "2.5.0"
patternscan = "1.2.0"
thiserror = "1.0.38"
enum-display-derive = "0.1.1"
clap = { version = "4.1.4", features = ["derive", "env"] }
http = "0.2.9"
msgbox = "0.7.0"
log = "0.4.17"
fern = "0.6.2"
chrono = "0.4.25"

[dependencies.tokio]
version = "1.25.0"
features = ["full"]

[dependencies.windows]
version = "0.44.0"
features = [
    "Win32_System_Console",
    "Win32_Foundation",
    "Win32_System_SystemServices",
    "Win32_System_LibraryLoader",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemInformation",
]
