[package]
name = "thief-injector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
dll-syringe = "0.15.0"
tokio = { version = "1.25.0", features = ["full"] }
clap = { version = "4.1.4", features = ["derive"] }
crossterm = { version = "0.26.0", features = ["event-stream"] }
futures = "0.3.26"
