[package]
name = "rtti-exporter-dll"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.57"
lazy_static = "1.4.0"

[dependencies.windows]
version = "0.44.0"
features = [
    "Win32_System_Console",
    "Win32_Foundation",
    "Win32_System_SystemServices",
    "Win32_System_LibraryLoader",
]
