[package]
name = "rtti-exporter-dll"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.57"
thiserror = "1.0.38"
lazy_static = "1.4.0"
exe = "0.5.6"
memchr = "2.5.0"
patternscan = "1.2.0"
num = "0.4.0"
num-derive = "0.3.3"
num-traits = "0.2.15"
libc = "0.2.139"

[dependencies.windows]
version = "0.44.0"
features = [
    "Win32_System_Console",
    "Win32_Foundation",
    "Win32_System_SystemServices",
    "Win32_System_LibraryLoader",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemInformation"
]
