[package]
name = "rtti-exporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.68"
clap = { version = "4.1.4", features = ["derive"] }
dll-syringe = "0.15.0"
rtti-exporter-dll = { path = "../rtti-exporter-dll" }
